# revq

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: release.yml
assets/: demo.tape
src/: cli.rs  config.rs  github.rs  init.rs  main.rs  pr.rs  query.rs
