[package]
name = "revq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["cargo"]}
directories = "5.0.1"
inquire = "0.7.5"
octocrab = "0.39.0"
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.128"
skim = "0.10.4"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
webbrowser = "1.0.1"
