[package]
name = "revq"
version = "0.1.0"
edition = "2021"
authors = ["Jain Ramchurn"]
description = "Review and query your pull requests"
license = "MIT"
repository = "https://github.com/k3ii/revq"
homepage = "https://github.com/k3ii/revq"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["cargo", "color"] }
colored = "2.1.0"
directories = "5.0.1"
inquire = "0.7.5"
octocrab = "0.39.0"
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.128"
skim = "0.10.4"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
webbrowser = "1.0.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "k3ii/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
